$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 2.1-25 (opened February 2, 2013)

	* FAQ: new entry on impossibility of using random effects in cca,
	rda, capscale & adonis, and telling how to do this
	approximately. Please comment and correct.

	* oecosimu: changed the structure of the oecosimu() result
	object. It now returns a list of two items: "statistic" is the
	observed statistic, and "oecosimu" which contains the simulation
	records. In previous version the function returned the statistic
	and added item "oecosimu" there. Previously, the result object was
	of type c("oecosimu", class(statistic)) as the original
	"statistic" object was returned amended with an "oecosimu" item,
	but now it is only of type "oecosimu" with the original
	"statistic" as a separate item. So "statistic" is now one level
	deeper instead of being the main object.

	* simulate: the simulate functions for "rda" and "cca" return
	objects with original row and column names. Function capscale()
	already did so, and simulate.nullmodel() was changed so in vegan
	2.1-24 (r2396).
	
Version 2.1-24 (closed February 2, 2013)

	* simulate.nullmodel: output array inherits dimnames after the
	input data matrix, this is often required by oecosimu.
	Dimension names are now only stored once for all nsim
	simulations, so it is an improvement over the implementation
	in commsimulator.

	* oecosimu: the 'oecosimu' list cannot be added to the result if
	the nestfun() returns a data frame. In that case, the 'oecosimu'
	list is treated like a variable, and this gives either an error of
	wrong length or if the length matches, a mess.  Now data frame is
	silently turned into a list which also means that it will not be
	printed with the output. The name of the 'statistic' is not used
	for unnamed vector output where it would only name the first item
	(like would be the case if the 'statistic' was extracted from a
	data frame). It is now checked that only one 'statistic' is given