@@ -31,13 +31,16 @@
         }
         if (take > 0) 
             Xbar <- u %*% slam %*% t(v)
-        if (!is.null(object$pCCA)) 
-            warning("Conditional ('partial') component ignored")
         rc <- outer(rs, cs)
-        if (type == "response") 
+        if (type == "response") {
+            if (!is.null(object$pCCA)) 
+                warning("Conditional ('partial') component ignored")
             out <- (Xbar + 1) * rc * gtot
-        else                 # type == "working"
+        } else {                # type == "working"
             out <- Xbar * sqrt(rc)
+            if (!is.null(object$pCCA))
+                out <- out + object$pCCA$Fit
+        }
     }
     else if (type == "lc") {
         if (model == "CA") 
